# rust-littlekit

./: .env  Cargo.toml  README.md  schema.sql  users.db
src/: main.rs
src/handlers/: user_handler.rs
src/models/: user.rs
src/routes/: user_routes.rs
src/utils/: logger.rs
