[package]
name = "rust-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "local-offset"] }
dirs = "5.0"
